<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.DialogFragmentNuevaNota">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edtTituloNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_note"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edtContenidoNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_note"
            android:inputType="textMultiLine"
            android:minLines="4"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="0.3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_color"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"/>

            <View
                android:layout_width="80dp"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="15dp"/>

            <RadioGroup
                android:id="@+id/radioGroupColores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginBottom="15dp">

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radioRojo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/red_color" />

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radioVerde"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/green_color" />

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radioAzul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_color" />

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radioBlanco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/color_blanco" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favoritas"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:layout_marginStart="20dp"
                android:textSize="14sp"/>

            <Switch
                android:id="@+id/switchFavorito"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>